--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "eslint-plugin-react": "^3.6.2",
     "express": "^4.13.4",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.3.1",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.4.6",
+    "redux": "^3.5.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
