--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "lodash": "^4.17.2",
+    "node-uuid": "^1.4.7",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
     "redux": "^3.5.0",
     "webpack-dev-server": "^1.16.2"
   }
