--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.13.4",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.3.1",
+    "redux-logger": "^2.7.4",
     "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
@@ -51,6 +52,8 @@
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "redux": "^3.5.0",
+    "redux-logger": "^2.7.4",
+    "redux-promise": "^0.5.3",
     "webpack-dev-server": "^1.16.2"
   }
 }
