--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "redux": "^3.5.0",
     "redux-logger": "^2.7.4",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0",
     "webpack-dev-server": "^1.16.2"
   }
 }
