--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "lodash": "^4.17.2",
     "node-uuid": "^1.4.7",
+    "normalizr": "^2.3.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.6",
